# fixpoint_autopar

./: .gitignore  README.md
analysis/: functions.md
grep-lambda/: grep.py
playground/: .gitignore
playground/grep/: execInfo
playground/grep-lambda-file/: CMakeLists.txt  README.md  main.cpp
playground/grep/src/: Makefile  benchmark.plain.bc  no-specpriv.dump
playground/simple_grep/: execInfo
playground/simple_grep/src/: Makefile  all-spec.dump  grep.cpp
playground/simple_grep_c/src/: Makefile  all-spec.dump  grep  grep.c
playground/simple_grep_c_lambda/: execInfo
playground/simple_grep_c_lambda/src/: CMakeLists.txt  Makefile  benchmark.plain.bc  grep.cpp
